# casq

./: .flake8  .pre-commit-config.yaml  README.md  genindex.html  index.html  objects.inv  overview.html  py-modindex.html  pyproject.toml  roadmap.html  search.html  searchindex.js  tox.ini
.github/workflows/: ci.yml
_sources/: index.rst.txt  overview.rst.txt  roadmap.rst.txt
_sources/autoapi/: index.rst.txt
_sources/autoapi/casq/: index.rst.txt
_sources/autoapi/casq/about/: index.rst.txt
_sources/autoapi/casq/backends/: index.rst.txt
_sources/autoapi/casq/common/: index.rst.txt
_sources/autoapi/casq/gates/: index.rst.txt
_sources/autoapi/casq/models/: index.rst.txt
_sources/autoapi/casq/notebooks/: index.rst.txt
_sources/autoapi/casq/optimizers/: index.rst.txt
_sources/autoapi/casq/pulse_optimizer/: index.rst.txt
_sources/autoapi/src/: index.rst.txt
_sources/autoapi/src/casq/: index.rst.txt
_sources/developer_guide/: ci.rst.txt
_sources/tutorials/: pulse_optimization.rst.txt
_sources/user_guide/: pulse_backend.rst.txt  pulse_optimizer.rst.txt
_static/css/: custom.css
autoapi/: index.html
autoapi/casq/: index.html
autoapi/casq/about/: index.html
autoapi/casq/backends/: index.html
autoapi/casq/backends/helpers/: index.html
autoapi/casq/backends/pulse_backend/: index.html
autoapi/casq/backends/pulse_solution/: index.html
autoapi/casq/backends/qiskit/: index.html
autoapi/casq/common/: index.html
autoapi/casq/common/decorators/: index.html
autoapi/casq/common/exceptions/: index.html
autoapi/casq/common/helpers/: index.html
autoapi/casq/common/plotting/: index.html
autoapi/casq/gates/: index.html
autoapi/casq/gates/constant_pulse_gate/: index.html
autoapi/casq/gates/drag_pulse_gate/: index.html
autoapi/casq/gates/gaussian_pulse_gate/: index.html
autoapi/casq/gates/gaussian_square_drag_pulse_gate/: index.html
autoapi/casq/gates/gaussian_square_pulse_gate/: index.html
autoapi/casq/models/: index.html
autoapi/casq/notebooks/: index.html
autoapi/casq/optimizers/: index.html
autoapi/casq/pulse_optimizer/: index.html
autoapi/src/: index.html
autoapi/src/casq/: index.html
autoapi/src/casq/casq_object/: index.html
developer_guide/: ci.html  documentation.html  environment.html  index.html  style.html  testing.html
docs/source/: conf.py  index.rst  overview.rst  roadmap.rst
docs/source/how_tos/: index.rst  jax.rst  qiskit.rst
docs/source/introduction/: getting_started.rst  helpers.rst  index.rst  pulse_backend.rst  pulse_circuit.rst  pulse_gate.rst  pulse_model.rst  pulse_optimizer.rst
docs/source/tutorials/: index.rst
docs/source/user_guide/: pulse_circuit.rst  pulse_optimizer.rst
logo/: logo_with_title.idraw
src/casq/: __init__.py  base_object.py  casq_object.py  casq_simulator.py  helpers.py  pulse_backend_properties.py  pulse_circuit.py  pulse_optimizer.py  pulse_simulator.py  pulse_solver.py
src/casq/backends/: __init__.py  helpers.py  pulse_backend.py  pulse_solution.py
src/casq/circuit/: __init__.py  drag_pulse_gate.py  gaussian_pulse_gate.py  gaussian_square_pulse_gate.py  pulse_circuit.py  pulse_gate.py
src/casq/common/: __init__.py  decorators.py  exceptions.py  helpers.py  plotting.py  pulse_backend_properties.py
src/casq/gates/: __init__.py  constant_pulse_gate.py  drag_pulse_gate.py  gaussian_pulse_gate.py  gaussian_square_drag_pulse_gate.py  gaussian_square_pulse_gate.py  pulse_circuit.py  pulse_gate.py
src/casq/models/: __init__.py  control_model.py  hamiltonian_model.py  noise_model.py  pulse_backend_model.py  transmon_model.py  transmon_noise_model.py
src/casq/notebooks/: playground.ipynb  x_gate.ipynb  x_gate0.ipynb  x_gate1.ipynb
src/casq/optimizers/: __init__.py  pulse_optimizer.py
tests/: conftest.py
tests/casq/: base_object_test.py  casq_object_test.py  debug_test.py  pulse_optimizer_test.py  pulse_simulator_test.py
tests/casq/backends/: pulse_backend_solution_test.py  pulse_solution_test.py
tests/casq/circuit/: drag_pulse_gate_test.py  gaussian_pulse_gate_test.py  gaussian_square_pulse_gate_test.py  pulse_circuit_test.py  pulse_gate_test.py
tests/casq/common/: decorators_test.py  exceptions_test.py  helpers_test.py  plotting_test.py  pulse_backend_properties_test.py
tests/casq/gates/: drag_pulse_gate_test.py  gaussian_pulse_gate_test.py  gaussian_square_pulse_gate_test.py  pulse_circuit_test.py  pulse_gate_test.py
tutorials/: pulse_optimization.html
user_guide/: getting_started.html  index.html  pulse_backend.html  pulse_circuit.html  pulse_gate.html  pulse_optimizer.html
user_guide/how_tos/: awg.html  helpers.html  index.html
user_guide/tutorials/: index.html  single_qubit.html  two_qubit.html
(+73 files in other folders)
