[tool.poetry]
name = "casq"
version = "0.1.0"
description = ""
authors = ["Sinan Inel <sinan.inel@aalto.fi>"]
license = "Apache 2.0 License"
readme = "README.md"
homepage = "https://github.com/sinel/casq"

[tool.poetry.dependencies]
python = "^3.11"
loguru = "0.7.0"

[tool.poetry.dev-dependencies]
black = "^23.3.0"
flake8 = "^6.0.0"
isort = "^5.10.1"
loguru-caplog = "0.2.0"
pytest-cov = "^4.1.0"
pytest-mock = "^3.7.0"
xdoctest = "^1.1.1"

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 88
balanced_wrapping = true
order_by_type = true
use_parentheses = true
force_sort_within_sections = true
reverse_relative = true
known_first_party = "quaint"
src_paths = ["src", "tests"]

[tool.pytest.ini_options]
pythonpath = "src/"
python_files = "*_test.py"
python_functions = "test_*"
addopts = "--capture=tee-sys --cov=src --xdoctest tests"
filterwarnings = "ignore::DeprecationWarning"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
