[tool.poetry]
name = "casq"
version = "0.1.0"
description = ""
authors = ["Sinan Inel <sinan.inel@aalto.fi>"]
license = "Apache 2.0 License"
readme = "README.md"
homepage = "https://github.com/sinel/casq"

[tool.poetry.dependencies]
loguru = "^0.7.0"
pydata-sphinx-theme = "^0.13.3"
python = "^3.11"
sphinx = "^7.0.1"
sphinx-autoapi = "^2.1.1"
sphinx-favicon = "^1.0.1"
sphinxcontrib-napoleon = "^0.7"

[tool.poetry.dev-dependencies]
black = "^23.3.0"
flake8 = "^6.0.0"
isort = "^5.12.0"
flake8-docstrings = "^1.6.0"
mypy = "^1.3.0"
pre-commit = "^3.3.2"
pytest-cov = "^4.1.0"
pytest-mock = "^3.7.0"
tox = "^4.5.2"
xdoctest = "^1.1.1"

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 88
balanced_wrapping = true
order_by_type = true
use_parentheses = true
force_sort_within_sections = true
reverse_relative = true
known_first_party = "quaint"
src_paths = ["src", "tests"]

[tool.mypy]
mypy_path = "src"
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
explicit_package_bases = true

[tool.pytest.ini_options]
pythonpath = "src/"
python_files = "*_test.py"
python_functions = "test_*"
addopts = "--capture=tee-sys --cov=src --xdoctest tests"
filterwarnings = "ignore::DeprecationWarning"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
